# context-pilot-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  dev.md
src/: algo_loc.rs  authordetails_impl.rs  config.rs  config_impl.rs  contextgpt_structs.rs  db.rs  db_new.rs  diff.rs  diff_v2.rs  file_utils.rs  git_command_algo.rs  lib.rs  main.rs  main_second.rs  server.rs  test.rs  utils.rs
src/tests/: tracking.rs
tests/: index_file_mode.rs  index_file_mode_new.rs  index_file_reindexing.rs  no_reindexing.rs  real_commits.rs  real_commits.txt  reorder_map.rs  smart_indexing.rs  test_desc_with_pr_comments.rs  tracking.rs  tracking_complex.rs
