[package]
name = "context-pilot"
version = "0.0.2"
edition = "2021"

[dependencies]
btree-map = "0.1.0"
quicli = "0.4.0"
structopt = "0.3.26"
linecount = "0.1.0"
serde_json = "1.0.99"
serde = { version = "1.0.164", features = ["derive"] }
simple-home-dir = "0.1.2"
tokio = { version = "1.0.1", features = ["full"] }
env_logger = "*"
async-recursion = "1.0.5"
