[package]
name = "contextpilot"
version = "0.0.3"
edition = "2024"

[dependencies]
btree-map = "0.1.0"
quicli = "0.4.0"
structopt = "0.3.26"
linecount = "0.1.0"
serde_json = "1.0.99"
serde = { version = "1.0.164", features = ["derive"] }
simple-home-dir = "0.1.2"
tokio = { version = "1.0.1", features = ["full"] }
env_logger = "*"
async-recursion = "1.1.1"
uuid = { version = "*", features = ["v4"] }
crossbeam = "0.8.4"
rayon = "1.10.0"
regex = "1"
sha2 = "0.10"
hex = "0.4"
colored = "2.0"
futures = "*"
similar = "2.7.0"
strsim = "0.11.1"
