[package]
name = "contextpilot"
version = "0.9.0"
edition = "2024"

[dependencies]
quicli = "0.4.0"
structopt = "0.3.26"
serde_json = "1.0.99"
serde = { version = "1.0.164", features = ["derive"] }
simple-home-dir = "0.1.2"
tokio = { version = "1.0.1", features = ["full"] }
env_logger = "*"
async-recursion = "1.1.1"
regex = "1"
ignore = "*"

[dev-dependencies]
tempfile = "3.8.0"
